# socket-terminal

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake-conf/: CMakeLists.txt
program/: main.cpp
server/: Makefile
server/inc/: arg_dispacher.hpp  args.hpp  basic_commands.hpp  client_session.hpp  command.hpp  command_dispacher.hpp  logger.hpp  main.hpp  network_utils.hpp  socket_terminal_server.hpp
server/src/: arg_dispacher.cpp  basic_commands.cpp  client_session.cpp  command_dispacher.cpp  logger.cpp  main.cpp  network_utils.cpp  socket_terminal_server.cpp
src/: CMakeLists.txt
src/commands/: CMakeLists.txt  basic_cmd.cpp  basic_cmd.hpp  command.hpp  command_dispatcher.cpp  command_dispatcher.hpp  commands_dispatcher.cpp  commands_dispatcher.hpp  linux_stats_cmd.cpp  linux_stats_cmd.hpp
src/network-hal/: CMakeLists.txt  sockets_adapter.hpp  sockets_api.hpp
src/network-hal/linux/: CMakeLists.txt  adapters_impl.hpp  in_socket_api.cpp  socket_api.cpp  sockets_adapter.cpp  sockets_api.cpp
src/network-hal/win/: CMakeLists.txt  sockets_api.cpp
src/server/: CMakeLists.txt  client_session.cpp  client_session.hpp  identity.cpp  identity.hpp  input_collector.cpp  input_collector.hpp  session_controller.cpp  session_controller.hpp  socket_server.cpp  socket_server.hpp  srv_def.hpp
src/socket-server/: CMakeLists.txt  client_session.cpp  client_session.hpp  server.cpp  server.hpp  socket_server.cpp  socket_server.hpp
src/utils/: logger.hpp  timer.hpp
startup/: CMakeLists.txt  main.cpp
ut_test/: CMakeLists.txt
ut_test/commands/: CMakeLists.txt  command_dispatcher.cpp
ut_test/server/: CMakeLists.txt  identity.cpp
ut_test/ut_main/: CMakeLists.txt  test_main.cpp
